log
Thu Apr 16 08:45:05 PM UTC 2026: 
 hashmap.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:74:21: error: ‘map->buckets’ is a pointer to pointer; did you mean to dereference it before applying ‘->’ to it?
   74 |         map->buckets->key = key;
      |                     ^~
      |         (*          )
hashmap.c:76:21: error: ‘map->buckets’ is a pointer to pointer; did you mean to dereference it before applying ‘->’ to it?
   76 |         map->buckets->values = values;
      |                     ^~
      |         (*          )
hashmap.c:76:32: error: ‘values’ undeclared (first use in this function); did you mean ‘value’?
   76 |         map->buckets->values = values;
      |                                ^~~~~~
      |                                value
hashmap.c:76:32: note: each undeclared identifier is reported only once for each function it appears in
8e1216e
Thu Apr 16 08:45:45 PM UTC 2026: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:74:28: error: ‘map->buckets’ is a pointer to pointer; did you mean to dereference it before applying ‘->’ to it?
   74 |         strcpy(map->buckets->key = key);
      |                            ^~
      |                (*          )
hashmap.c:74:9: error: too few arguments to function ‘strcpy’
   74 |         strcpy(map->buckets->key = key);
      |         ^~~~~~
In file included from /nix/store/41pf3md9zgpda9kwh6rzn5kaddf7i0lp-glibc-2.40-66-dev/include/features.h:511,
                 from /nix/store/41pf3md9zgpda9kwh6rzn5kaddf7i0lp-glibc-2.40-66-dev/include/bits/libc-header-start.h:33,
                 from /nix/store/41pf3md9zgpda9kwh6rzn5kaddf7i0lp-glibc-2.40-66-dev/include/stdio.h:28,
                 from test.c:1:
/nix/store/41pf3md9zgpda9kwh6rzn5kaddf7i0lp-glibc-2.40-66-dev/include/bits/string_fortified.h:77:1: note: declared here
   77 | __NTH (strcpy (__fortify_clang_overload_arg (char *, __restrict, __dest),
      | ^~~~~
hashmap.c:76:21: error: ‘map->buckets’ is a pointer to pointer; did you mean to dereference it before applying ‘->’ to it?
   76 |         map->buckets->values = value;
      |                     ^~
      |         (*          )
da7b968
Thu Apr 16 08:46:39 PM UTC 2026: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:69:31: error: left-hand operand of comma expression has no effect [-Werror=unused-value]
   69 |         map->buckets[pos]->key, key;
      |                               ^
hashmap.c:69:9: error: statement with no effect [-Werror=unused-value]
   69 |         map->buckets[pos]->key, key;
      |         ^~~
hashmap.c:74:21: error: ‘map->buckets’ is a pointer to pointer; did you mean to dereference it before applying ‘->’ to it?
   74 |         map->buckets->key = key;
      |                     ^~
      |         (*          )
hashmap.c:76:21: error: ‘map->buckets’ is a pointer to pointer; did you mean to dereference it before applying ‘->’ to it?
   76 |         map->buckets->value = value;
      |                     ^~
      |         (*          )
cc1: all warnings being treated as errors
979ab3d
Thu Apr 16 08:47:10 PM UTC 2026: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:69:31: error: left-hand operand of comma expression has no effect [-Werror=unused-value]
   69 |         map->buckets[pos]->key, key;
      |                               ^
hashmap.c:69:9: error: statement with no effect [-Werror=unused-value]
   69 |         map->buckets[pos]->key, key;
      |         ^~~
cc1: all warnings being treated as errors
e50d6ab
Thu Apr 16 08:47:31 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 5/60
75842c0
Thu Apr 16 08:50:36 PM UTC 2026: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|6
total_score: 5/60
54c8665
Thu Apr 16 08:52:46 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 5/60
5effa39
Thu Apr 16 08:53:51 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 15/60
b6c31a8
Thu Apr 16 08:56:04 PM UTC 2026: 
 tests:  4|5
total_score: 15/60
75d0763
Thu Apr 16 10:24:30 PM UTC 2026: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:52:10: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘bucket’; did you mean ‘buckets’?
   52 |     map->bucket = NULL;
      |          ^~~~~~
      |          buckets
70a66f0
